--- a/Big-Data-Marketing.html
+++ b/Big-Data-Marketing.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0" nonce="Cs8cl2P6"></script>
 	  <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html">MarTech<i>Zone</i>.</a>
@@ -66,7 +67,7 @@
 <p>Nói một cách đơn giản, dữ liệu lớn là những tập dữ liệu lớn hơn, phức tạp hơn, đặc biệt là từ các nguồn dữ liệu mới. Những tập dữ liệu này quá lớn đến nỗi phần mềm xử lý dữ liệu truyền thống không thể quản lý chúng. Nhưng những khối lượng dữ liệu khổng lồ này có thể được sử dụng để giải quyết các vấn đề kinh doanh mà trước đây bạn không thể giải quyết.</p>
 <p>“Nếu không có phân tích dữ liệu lớn, các công ty sẽ mù và điếc, lang thang trên Web như những con nai trên xa lộ”</p>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/ung-dung-big-data-digital-marketing.jpg" alt="" class="img-fluid">
             </p>
             <p>Khi tác giả Geoffrey Moore đã tweet lại tuyên bố đó vào năm 2012, nó có thể được coi là một lời nói quá. Giờ đây, Big Data được chấp nhận rộng rãi ở hầu hết mọi ngành, đặc biệt là trong tiếp thị và bán hàng. Trong khi tweet của Moore đề cập cụ thể đến phân tích dữ liệu lớn, điều này cũng đúng đối với tất cả các khía cạnh của dữ liệu lớn, bao gồm nhập dữ liệu, tích hợp, lưu trữ và hơn thế nữa.</p>
 <p>Cho dù bạn đang cố gắng cải thiện lòng trung thành và mức độ tương tác của khách hàng, tối ưu hóa hiệu suất hay đưa ra quyết định về giá cả, Big Data trong Marketing đã được chứng minh là một công cụ không thể thiếu.</p>
@@ -79,6 +80,10 @@
 <li><b>Cải thiện việc thu hút khách hàng là một lợi ích lớn khác mà dữ liệu lớn mang lại cho hoạt động tiếp thị. Tận dụng đám mây cho phép thu thập và phân tích dữ liệu nhất quán và được cá nhân hóa từ nhiều nguồn, chẳng hạn như web, ứng dụng di động, email, trò chuyện trực tiếp và thậm chí cả các tương tác tại cửa hàng.</li>
 <li>Dữ liệu lớn có thể giúp các nhà tiếp thị <b>tận dụng dữ liệu thời gian thực trong môi trường điện toán đám mây.</b> Khả năng thu thập, xử lý và phân tích dữ liệu thời gian thực đủ nhanh chóng và chính xác để thực hiện hành động tức thì và hiệu quả mà không công nghệ nào khác có thể sánh kịp. Điều này rất quan trọng khi phân tích dữ liệu từ GPS, cảm biến IOT , nhấp chuột trên trang web hoặc dữ liệu thời gian thực khác.</li>
 <li>Phân tích dữ liệu lớn là một thành phần thiết yếu của dữ liệu lớn. Nó cung cấp thông tin kinh doanh, giúp <b>tiết kiệm thời gian và chi phí</b> bằng cách tối ưu hóa hiệu suất tiếp thị.</li>
+<p class="mb-5">
+              <img src="images/Streamline-Multi-Channel-Marketing-with-Big-Data_big.png" alt="" class="img-fluid">
+            </p>
+
 <h2 class="mb-3 mt-5">Ứng dụng của Big Data trong Marketing</h2>
 <p><b>1. Tăng khả năng thu hút và giữ chân khách hàng</b></p>
 <p>Khách hàng là tài sản quan trọng nhất mà bất kỳ doanh nghiệp nào phụ thuộc vào. Không có doanh nghiệp nào có thể khẳng định thành công mà trước hết phải thiết lập một cơ sở khách hàng vững chắc.</p>
@@ -95,6 +100,9 @@
 <p>Mọi quy trình thiết kế phải bắt đầu từ việc thiết lập những gì chính xác phù hợp với khách hàng và nghiên cứu nhu cầu khách hàng. Sau đó, doanh nghiệp có thể xác định cách tiếp cận tốt nhất để tận dụng nhu cầu đó dựa trên phân tích dữ liệu lớn.</p>
 <p><b>5. Sử dụng Big Data trong quản lý chuỗi cung ứng</b></p>
 <p>Dữ liệu lớn cung cấp cho mạng lưới nhà cung cấp độ chính xác  và thông tin chi tiết cao hơn. Về cơ bản, thông qua phân tích dữ liệu lớn, các nhà cung cấp có thể thoát khỏi những hạn chế phải đối mặt trước đó.</p>
+<p class="mb-5">
+              <img src="images/201606181203199340.jpg" alt="" class="img-fluid">
+            </p>
 <h2 class="mb-3 mt-5">Hãy khai thác Big Data trong Marketing ngay hôm nay!</h2>
 <p>Trong quá trình các khách hàng ghé thăm và tương tác với website, doanh nghiệp sẽ thu thập được lượng dữ liệu khổng lồ rất có giá trị. Thông qua đó, doanh nghiệp có thể nắm bắt sở thích, thói quen, nhu cầu tìm kiếm của khách hàng. Điều này sẽ tạo tiền đề để doanh nghiệp thực hiện marketing và gia tăng tỷ lệ chuyển đổi của mình.</p>
 <p>Một khi doanh nghiệp đã biết cách khai thác Big Data thì không chỉ lợi nhuận đi lên mà cả trải nghiệm mua sắm của người dùng cũng tăng theo. Trong hầu hết mọi cuộc đua và cũng như trên thương trường, những người tiên phong sẽ hưởng lợi nhiều nhất và có khả năng tiến xa, vượt mặt các đối thủ cạnh tranh. Hãy tự đánh giá quy trình thu thập dữ liệu hiện tại của doanh nghiệp rồi xác định những việc có thể làm ngay, bạn sẽ nắm được những dữ liệu quan trọng để lên chiến lược tiếp thị hợp lý.</p>
@@ -108,7 +116,7 @@
                   <a href="#" class="tag-cloud-link">Technology</a>
                </div>
             </div>
-            <div class="fb-comments" data-href="https://martechzonez.github.io/Ai-MarTech.html" data-numposts="5" data-width=""></div>
+            <div class="fb-comments" data-href="https://martechzonez.github.io/Big-Data-Marketing.html" data-numposts="5" data-width=""></div>
             <!-- END comment-list -->
             
          </div>
