--- a/CDP.html
+++ b/CDP.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0" nonce="puVyAZbx"></script>
     <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
       <div class="container">
         <a class="navbar-brand" href="index.html">MarTech<i>Zone</i>.</a>
@@ -63,7 +64,7 @@
 
 
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/man-questions-460717630-ss-1920.jpg" alt="" class="img-fluid">
             </p>
 
 <p>"Trong ba năm qua." Người sáng lập và Giám đốc điều hành của Treasure Data, Hiro Yoshikawa, cho biết trong một tuyên bố đi kèm với sự ra mắt của Viện, "chúng tôi đã thấy ngày càng nhiều tổ chức tiếp thị theo hướng dữ liệu áp dụng Treasure Data để thống nhất dữ liệu khách hàng của họ."</p>
@@ -78,12 +79,18 @@
 <p>- Họ được quản lý bởi nhà tiếp thị;</p>
 <p>- Họ sử dụng một cơ sở dữ liệu thống nhất, liên tục, duy nhất cho tất cả các hành vi, hồ sơ khách hàng và các dữ liệu khác, từ bất kỳ nguồn nội bộ hoặc bên ngoài nào;</p>
 <p>- Họ sử dụng một số nhận dạng nhất quán liên kết tất cả dữ liệu của khách hàng; và chúng hoàn toàn có thể truy cập được bởi các hệ thống bên ngoài và được cấu trúc để hỗ trợ đầy đủ nhu cầu của nhà tiếp thị về quản lý chiến dịch, phân tích tiếp thị và thông tin kinh doanh.</p>
+<p class="mb-5">
+              <img src="images/cdp-featured-image.jpg" alt="" class="img-fluid">
+            </p>
 
 <h2 class="mb-3 mt-5">Nhà cung cấp nào cung cấp CDP?</h2>
 <p>Raab cho biết có khoảng hai chục nhà cung cấp hiện đáp ứng các thông số kỹ thuật của CDP, ngay cả khi sản phẩm của họ được mô tả khác nhau.</p>
 <p>Blue Venn, ví dụ, được biết đến như một nền tảng tự động hóa tiếp thị và AgilOne đã tự mô tả mình là một “nền tảng tiếp thị dự đoán”, trong khi Ensighten thường được đặc trưng bởi quản lý thẻ và Phân đoạn bằng trung tâm API của nó. Treasure Data cung cấp cơ sở hạ tầng phân tích, Particle tự gọi mình là nền tảng dữ liệu di động, Ascent 360 cung cấp nền tảng chiến dịch tiếp thị và Signal là “nền tảng tiếp thị dựa trên con người”.</p>
 <p>Một số người khác trong danh sách ít nhiều tự mô tả mình là CDP, bao gồm RedPoint Global, Datorama, Lyrics và Blue Conic.</p>
 <p>Raab chưa có số liệu thống kê cụ thể về cách một CDP có thể tạo ra sự khác biệt rõ ràng so với các giải pháp khác hoặc cách phân khúc ngành này đang phát triển.</p>
+<p class="mb-5">
+              <img src="images/img_5e8d97b09ce3f.png" alt="" class="img-fluid">
+            </p>
 <p>Tất nhiên, khi mọi nhà cung cấp cho biết họ đã thực hiện kiểu xem thống nhất này và khi không có thử nghiệm rõ ràng để xác định đâu là CDP thực, thì việc quyết định chính xác nền tảng nào thuộc danh mục mới này có thể khó khăn.</p>
 <p>Nhưng, ít nhất, CDP đưa ra một mục tiêu cho những gì hệ thống tiếp thị nên làm: đáp ứng kỳ vọng của mọi khách hàng bằng cách hoàn toàn hiểu và sử dụng tất cả dữ liệu về từng hệ thống.</p>
 
@@ -94,7 +101,7 @@
                   <a href="#" class="tag-cloud-link">Technology</a>
                </div>
             </div>
-            <div class="fb-comments" data-href="https://martechzonez.github.io/Data-Driven-Marketing.html" data-numposts="5" data-width=""></div>
+            <div class="fb-comments" data-href="https://martechzonez.github.io/CDP.html" data-numposts="5" data-width=""></div>
             <!-- END comment-list -->
             
          </div>
