--- a/Martech-lanscape-xr-la-gi.html
+++ b/Martech-lanscape-xr-la-gi.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0" nonce="oBO28Fzd"></script>
     <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
       <div class="container">
         <a class="navbar-brand" href="index.html">MarTech<i>Zone</i>.</a>
@@ -62,38 +63,36 @@
             <p>Nếu bạn đang phân loại hàng loạt các công nghệ biến đổi thực tế, thì đây là một thuật ngữ ngày càng phổ biến bao gồm toàn bộ kênh.</p>
 <p>Thực tế ảo mở rộng (XR) đang được ưa chuộng cũng như tìm hiểu một các rầm rộ sau sự phát triển của công nghệ thực tế ảo (VR), thực tế ảo tăng cường (AR) và thực thế hỗn hợp (MR) thì. Vậy XR là gì trong Martech Lanscape? Cùng Martech Zone tìm hiểu về Thực tế mở rộng (Exetened Reality – XR) và những nền tảng liên quan nhé.</p>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/VR1.png" alt="" class="img-fluid">
             </p>
 <h2 class="mb-3 mt-5">Thực tế ảo (VR) là gì?</h2>
 <p>Thực tế ảo (Virtual Reality – VR) là một trải nghiệm mô phỏng không gian, sự vật, sự việc có thể giống hoặc khác hoàn toàn với thế giới thực. Môi trường này được con người thiết kế qua các ứng dụng phần mềm chuyên dụng, và hiển thị trên màn hình máy tính hoặc qua kính thực tế ảo (Oculus Rift, HTC Vive, Playstation VR…).</p>
 <p>Một thương hiệu mỹ phẩm đã rất thành công trong việc sử dụng công nghệ VR đó chính là thương hiệu mỹ phẩm Innisfree của Hàn Quốc, nhờ vào VR họ đã bắt đầu áp dụng và thực hiện chiến dịch quảng cáo “Someday in Jeju” – Jeju chính là một trong những nơi sản xuất nguyên liệu mỹ phẩm chính của Innisfree. Các bạn nữ tham dự trải nghiệm thực tế này sẽ được gắn thiết bị giúp đo nhịp tim từ đó “đo” cảm xúc của mình. Không mấy ngạc nhiên khi nhịp tim của các cô gái tăng gần như gấp đôi, lên tới 179 nhịp/phút (nhịp tim bình thường 60-100 nhịp/phút) khi gặp Lee Min Hoo.</p>
-<p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
-            </p>
+
             <p>Cũng trong thế giới đó, bạn có thể điều khiển và di chuyển đồ vật xung quanh bằng thiết bị hỗ trợ – bộ điều khiển xúc giác được kết nối với một số các thiết bị thông minh như máy tính. Người dùng sẽ có thể trải nghiệm không gian khá “ảo” nhưng lại rất chân thực do các giác quan đã bị đánh lừa bởi thiết bị này.</p>
  <h2 class="mb-3 mt-5">Sự khác biệt giữa thực tế ảo tăng cường (AR) và thực tế ảo (VR)?</h2>           
 <p>Trong khi VR đưa người dùng đến với một thế giới ảo tách biệt hoàn toàn với thực tại, thì công nghệ AR – thực tế ảo tăng cường lại giúp chúng ta đưa hình ảnh đồ họa (thông tin kỹ thuật số) vào trong thế giới thực từ đó người trải nghiệm bạn có thể nhìn bằng mắt thường. Một ví dụ nổi tiếng nhất cho công nghệ này là Pokémon Go là một trong những. Trung tâm nhưng tăng cường thêm các chi tiết kỹ thuật số cho thế giới ảo giống như thế giới thực là thực tế ảo tăng cường (AR).</p>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/vr3.jpg" alt="" class="img-fluid">
             </p>
 <p><i>Đây chính là công nghệ thực tế ảo tăng cường ứng dụng trong game Pokemon Go</i></p>   
 <p>Lotus đã ứng dụng công nghệ AR vào tấm vé mời, điều này khiến việc ra mắt mạng xã hội Lotus nổi hơn và được chia sẻ trên khắp MXH</p>  
    <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/vr4.jpg" alt="" class="img-fluid">
             </p>
 <h2 class="mb-3 mt-5">Thực tế mở rộng (Exetened Reality – XR) là gì?</h2> 
 <p>VR, AR và MR là mảng nhỏ trong thực tế mở rộng (Extended Reality – XR) đây chính là thuật ngữ gồm các  “thực tế” trong tương lai mà tất cả công nghệ có thể mang lại. XR là sự kết giao các loại công nghệ và cách mà VR, AR và MR phối hợp với nhau để phá vỡ các nhiệm vụ hàng ngày của con người.</p>
 <h2 class="mb-3 mt-5">Những tiềm năng của XR trong tương lai là gì?</h2>
 <p>Dự kiến ​​sẽ tăng gấp tám lần, quy mô thị trường ước tính đạt hơn 209 tỷ đô la vào năm 2022.</p>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/vr5.jpg" alt="" class="img-fluid">
             </p>
    <p><i>Ngành Giải trí</i></p>
    <p>XR chắc chắn sẽ mang đến trải nghiệm tuyệt vời cho thế giới giải trí khán giả có cơ hội trải nghiệm hầu hết các sự kiện thể thao và âm nhạc trực tiếp tại bất cứ đâu. Mặc dù phần lớn thị phần tập trung vào giải trí, nhưng đây không phải là nơi duy nhất phát triển XR.</p>     
    <p><i>Ngành Tiếp thị quảng cáo</i></p>   
    <p>VR giúp thương hiệu gắn kết với người tiêu dùng bằng những cách mới để các đồng thời cũng tạo ra các trải nghiệm mới để khách hàng để tương tác với các sản phẩm mới. Trong tương lai, các trải nghiệm sản phẩm sẽ còn trở nên phong phú hơn nữa nhờ XR.</p> 
    <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/vr6.png" alt="" class="img-fluid">
             </p>
     <p>...Và rất nhiều lĩnh vực khác</p>
     <p><i>Thách thức</i></p>   
@@ -106,7 +105,7 @@
                   <a href="#" class="tag-cloud-link">Technology</a>
                </div>
             </div>
-            <div class="fb-comments" data-href="https://martechzonez.github.io/Data-Driven-Marketing.html" data-numposts="5" data-width=""></div>
+           <div class="fb-comments" data-href="https://martechzonez.github.io/Martech-lanscape-xr-la-gi.html" data-numposts="5" data-width=""></div>
             <!-- END comment-list -->
             
          </div>
