--- a/Predictive-Advertising.html
+++ b/Predictive-Advertising.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0" nonce="Lin752TH"></script>
     <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
       <div class="container">
         <a class="navbar-brand" href="index.html">MarTech<i>Zone</i>.</a>
@@ -62,7 +63,7 @@
 <p>Predictive Advertising sử dụng dữ liệu, trí tuệ nhân tạo và thuật toán thống kê để dự đoán các phản ứng và kết quả. Predictive Advertising sử dụng cùng các nguyên tắc phân tích dự đoán trong bối cảnh quảng cáo.</p>
 <p>Với sự trợ giúp của quảng cáo dự đoán, bạn có thể xác định đối tượng tiềm năng và tiếp cận với họ bằng nội dung và nền tảng phù hợp nhất. Trí tuệ nhân tạo phân tích hành vi, đặc điểm, phản hồi và mua hàng trong quá khứ của khách hàng, v.v ... với sự trợ giúp của các thuật toán thống kê để dự đoán doanh số và phản hồi trong tương lai đó gọi là Predictive Advertising.</p>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/0.jpg" alt="" class="img-fluid">
             </p>
 
 <p>Ví dụ: Facebook cung cấp tính năng nhắm mục tiêu theo đối tượng giống như được lấy từ đối tượng tùy chỉnh. Bạn có thể cung cấp danh sách khách hàng, khách truy cập trang web, lượt thích trang trên Facebook và dựa trên thuộc tính của họ, Facebook sẽ chuẩn bị một danh sách người dùng có thuộc tính và hành vi tương tự. Về cơ bản, Facebook giúp bạn tiếp cận đối tượng rộng hơn có các thuộc tính tương tự như khách hàng hiện tại của bạn. Mặc dù những đối tượng tiềm năng này có thể không quen thuộc với thương hiệu của bạn, nhưng họ có nhiều khả năng trở thành khách hàng của bạn vì họ trông rất giống khách hàng hiện tại của bạn.</p>
@@ -78,7 +79,7 @@
                   <a href="#" class="tag-cloud-link">Technology</a>
                </div>
             </div>
-            <div class="fb-comments" data-href="https://martechzonez.github.io/Data-Driven-Marketing.html" data-numposts="5" data-width=""></div>
+            <div class="fb-comments" data-href="https://martechzonez.github.io/Martech-lanscape-xr-la-gi.html" data-numposts="5" data-width=""></div>
             <!-- END comment-list -->
             
          </div>
