--- a/Sprinklr.html
+++ b/Sprinklr.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0" nonce="illQbb0A"></script>
     <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
       <div class="container">
         <a class="navbar-brand" href="index.html">MarTech<i>Zone</i>.</a>
@@ -63,7 +64,7 @@
 <h2 class="mb-3 mt-5">Sprinklr là gì?</h2>
 <p>Sprinklr là sự lựa chọn tuyệt vời cho những doanh nghiệp lớn hay các thương hiệu đã có chiến lược truyền thông cụ thể trên mạng xã hội.</p>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/Livechat1.png" alt="" class="img-fluid">
             </p>
 
 <p>Sprinklr có tính năng tùy chỉnh đa dạng các loại nội dung trên các mạng xã hội khác nhau, hỗ trợ hiệu quả cho các phương tiện truyền thông xã hội. Thêm vào đó, nền tảng này còn có thể giúp người dùng thiết lập lộ trình kiểm tra chi tiết cho từng bài đăng một một cách khoa học.</p>
@@ -71,7 +72,7 @@
 <h2 class="mb-3 mt-5">Tại sao Sprinklr lại quan trọng đến vậy?</h2>
 <p>Bằng việc sử dụng các các công cụ quản lý mạng xã hội, doanh nghiệp của bạn có thể dễ dàng cải thiện và nâng cấp chất lượng tài khoản trên các trang mạng Internet.</p>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/livechat2.jpg" alt="" class="img-fluid">
             </p>
             <p><i>Một phần là vì nhu cầu sử dụng các công cụ quản lý mạng xã hội đang ngày càng gia tăng.</i></p>
 <p>Vào những năm gần đây, mạng xã hội đã có những bước phát triển rất mạnh mẽ và ngày càng được ưa chuộng hơn và có thể nói mạng xã hội là một phần không thể thiếu trong thế hệ Z ngày nay. Nắm bắt được xu thế đó, các doanh nghiệp cũng đầu tư rất nhiều tâm sức cho việc quảng bá thương hiệu trên các mạng xã hội lớn như Facebook và Instagram. Tuy nhiên, không phải tổ chức nào cũng biết cách để quản lý và điều hành tài khoản của mình và Sprinklr chính là một trong những giải pháp thông minh, hiệu quả cho doanh nghiệp.</p>
@@ -91,7 +92,7 @@
                   <a href="#" class="tag-cloud-link">Technology</a>
                </div>
             </div>
-            <div class="fb-comments" data-href="https://martechzonez.github.io/Data-Driven-Marketing.html" data-numposts="5" data-width=""></div>
+            <div class="fb-comments" data-href="https://martechzonez.github.io/Sprinklr.html" data-numposts="5" data-width=""></div>
             <!-- END comment-list -->
             
          </div>
