--- a/Web-Analytics-Software.html
+++ b/Web-Analytics-Software.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0" nonce="REO17JNn"></script>
     <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
       <div class="container">
         <a class="navbar-brand" href="index.html">MarTech<i>Zone</i>.</a>
@@ -63,7 +64,7 @@
 <h2 class="mb-3 mt-5">Web analytics là gì mà lại quan trọng đến như vậy?</h2>
 
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/web-analytics1.png" alt="" class="img-fluid">
             </p>
 
 <p>Để hiểu biết và tối ưu hóa việc sử dụng web thì "Web analytics" là " là giải pháp tối ưu, nó là quá trình đo đạc, thu thập, phân tích và báo cáo số liệu web. Cùng với đó Web analytics có thể được sử dụng để nghiên cứu kinh doanh cũng như thị trường, đánh giá và thúc đẩy nâng cao hiệu quả của một trang web.</p>
@@ -75,7 +76,7 @@
 <li>Bước 4: Xây dựng chiến lược trực tuyến: Giai đoạn này có liên quan với mục tiêu trực tuyến, mục tiêu và tiêu chuẩn cho các tổ chức, doanh nghiệp. Những chiến lược này thường liên quan đến việc kiếm tiền, tiết kiệm tiền, hoặc gia tăng thị phần.</li>
 <h2 class="mb-3 mt-5">Google Analytics là gì?</h2>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/web-analytics2.png" alt="" class="img-fluid">
             </p>
             <p>Có một công cụ phân tích website đáng tin cậy thuộc quyền sở hữu và phát triển của Google chính là Google Analytics Với Google Analytics các nhà phân tích, đánh giá website và giúp SEOer sẽ có thể định hướng và đánh giá tổng thể tình trạng website hiện tại của họ. Công cụ tìm kiếm của Google đã trực tiếp tổng hợp và thống kê công cụ Google Analytics với con bot dò tìm và quét website tạo độ chính xác khá cao cho user.</p>
 <p>Nhiều thông tin từ tổng quát đến chi tiết như lượt view trang web, hay thời gian ở lại trên trang, tỷ lệ thoát trang, cũng như tỉ lệ phản hồi của user… trên từng trang nhỏ trong website được Google Analytics cung cấp đầy đủ. Bên cạnh đó, GA còn có khả năng lọc được các lượt view ảo, đánh giá website của bạn trên lượt truy cập thực sự của người dùng.</p>
@@ -98,7 +99,7 @@
                   <a href="#" class="tag-cloud-link">Technology</a>
                </div>
             </div>
-            <div class="fb-comments" data-href="https://martechzonez.github.io/Data-Driven-Marketing.html" data-numposts="5" data-width=""></div>
+            <div class="fb-comments" data-href="https://martechzonez.github.io/Web-Analytics-Software.html" data-numposts="5" data-width=""></div>
             <!-- END comment-list -->
             
          </div>
