--- a/digital-commerce-advertising-management-platforms.html
+++ b/digital-commerce-advertising-management-platforms.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0" nonce="SkpGbyLt"></script>
     <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
       <div class="container">
         <a class="navbar-brand" href="index.html">MarTech<i>Zone</i>.</a>
@@ -84,7 +85,7 @@
 <p>Một số nhà cung cấp không chỉ dừng lại ở tính năng cơ bản là báo cáo mà còn cung cấp cho nhà quảng cáo hướng dẫn về những thứ như: khả năng sinh lời trên cơ sở từng sản phẩm, sản phẩm nên hay không nên quảng cáo, thị trường và hoạt động cạnh tranh, v.v.</p>
 
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/MIR_1912_DCAManagmt_cover_crop.jpg" alt="" class="img-fluid">
             </p>
 
 <p>Một số công cụ cũng cung cấp một cái nhìn tổng thể hơn về hiệu suất của sản phẩm, tích hợp thông tin bán hàng trả phí và không phải trả phí.</p>
@@ -98,7 +99,7 @@
                   <a href="#" class="tag-cloud-link">Technology</a>
                </div>
             </div>
-            <div class="fb-comments" data-href="https://martechzonez.github.io/Data-Driven-Marketing.html" data-numposts="5" data-width=""></div>
+            <div class="fb-comments" data-href="https://martechzonez.github.io/digital-commerce-advertising-management-platforms.html" data-numposts="5" data-width=""></div>
             <!-- END comment-list -->
             
          </div>
