--- a/long-trung-thanh.html
+++ b/long-trung-thanh.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0" nonce="RclsfmJu"></script>
     <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
       <div class="container">
         <a class="navbar-brand" href="index.html">MarTech<i>Zone</i>.</a>
@@ -59,7 +60,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-
+<p class="mb-5">
+              <img src="images/AI_850x510.jpg" alt="" class="img-fluid">
+            </p>
             <p>Trí tuệ nhân tạo (AI) đang là một chủ đề siêu hot hiện nay trong lĩnh vực marketing.</p>
             <p>Theo một nghiên cứu của Teradata, 80% doanh nghiệp báo cáo rằng tổ chức của họ đã có một số dạng AI trong sản xuất. Nghiên cứu cũng tiết lộ rằng một trong những lĩnh vực được lên kế hoạch đầu tư vào AI cho các thương hiệu là trải nghiệm khách hàng.</p>
 
@@ -69,7 +72,7 @@
 <p>Hiểu nhu cầu của đối tượng mục tiêu là cốt lõi của mọi chiến lược tiếp thị thành công. Với AI, bạn có thể hiểu rõ hơn về hành vi của chúng và dự đoán những gì chúng có khả năng tìm kiếm.</p>
 <h2 class="mb-3 mt-5">2) Đưa ra đề xuất được cá nhân hóa cho trải nghiệm được cá nhân hóa</h2>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/ai-tri-tue-nhan-tao-la-gi-va-duoc-ung-dung-nhu-the-nao-1.jpg" alt="" class="img-fluid">
             </p>
 
 <p>Cá nhân hóa là vô cùng quan trọng đối với lòng trung thành của khách hàng. Đó là bởi vì người tiêu dùng có nhiều khả năng mua hàng hơn nếu bạn cung cấp cho họ thứ gì đó mà họ thực sự thích hoặc đang tìm kiếm. Xét cho cùng, nếu bạn đang đạt được những gì mình muốn, bạn sẽ không có khả năng chuyển sang thương hiệu của đối thủ cạnh tranh.</p>
@@ -78,6 +81,9 @@
 <p>Bất cứ khi nào khách hàng thực hiện bất kỳ hành động nào - xem một mặt hàng, mua một mặt hàng, để lại đánh giá - các thuật toán học sâu sẽ ghi lại hành động đó. Sau đó, khi bạn phân tích thông tin này, bạn có thể tạo các nhân vật khách hàng cụ thể được phân đoạn theo độ tuổi, vị trí, sở thích và hơn thế nữa.</p>
 <p>Với các phân đoạn này, bạn có thể cá nhân hóa tốt hơn các ưu đãi mà bạn cung cấp cho khách hàng của mình. Thay vì làm theo một kiểu mẫu phù hợp với tất cả mọi người, bạn có thể thiết kế riêng để đáp ứng từng yêu cầu của họ. Vì vậy, nếu bạn có năm tính cách khách hàng khác nhau, bạn có thể đưa ra năm chương trình khách hàng thân thiết khác nhau. Mỗi người có thể có một khuyến khích đáp ứng nhu cầu cụ thể của phân khúc đối tượng cụ thể.</p>
 <p>Một cách khác mà AI có thể biến đổi các chương trình khách hàng thân thiết truyền thống là thông qua số hóa chúng. Với chatbots, bạn có thể chuyển chương trình khách hàng thân thiết của mình trực tuyến.</p>
+<p class="mb-5">
+              <img src="images/trituecuamaymocduoctaoraboiconnguoi.jpeg" alt="" class="img-fluid">
+            </p>
 <h2 class="mb-3 mt-5">4) Triển khai AI để đổi mới sản phẩm tốt hơn</h2>
 <p>Một lợi ích khác chưa được tận dụng của AI là đổi mới sản phẩm. Với trí tuệ nhân tạo, bạn có thể hiểu rõ hơn những gì khách hàng của bạn muốn. Vậy tại sao không sử dụng kiến ​​thức này để thiết kế sản phẩm đáp ứng yêu cầu của họ?</p>
 <p>Hãy cho bộ phận R & D của bạn biết khách hàng của bạn đang tìm kiếm điều gì để họ có thể đưa ra các giải pháp giải quyết các điểm khó khăn cụ thể của đối tượng của bạn. Đó là một cách tuyệt vời để có được lợi thế so với các đối thủ cạnh tranh của bạn.</p>
@@ -90,7 +96,7 @@
                   <a href="#" class="tag-cloud-link">Technology</a>
                </div>
             </div>
-            <div class="fb-comments" data-href="https://martechzonez.github.io/Data-Driven-Marketing.html" data-numposts="5" data-width=""></div>
+            <div class="fb-comments" data-href="https://martechzonez.github.io/long-trung-thanh.html" data-numposts="5" data-width=""></div>
             <!-- END comment-list -->
             
          </div>
