--- a/tiep-thi-theo-huong-du-lieu.html
+++ b/tiep-thi-theo-huong-du-lieu.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0" nonce="bLKR8YE5"></script>
 	  <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html">MarTech<i>Zone</i>.</a>
@@ -59,6 +60,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
+
+            <p class="mb-5">
+            <img src="images/Data-driven-decision-making-1.png" alt="" class="img-fluid">
+            </p>
             <p>Tiếp thị theo hướng dữ liệu đang trên đà trở thành “điều quan trọng tiếp theo” trong B2B. Điều đó tốt, vì nó hoạt động!</p>
 
 <p>Nhưng bạn không cần phải tin lời chúng tôi. Nguyên tắc cơ bản của tiếp thị theo hướng dữ liệu là dữ liệu của bạn phải tự nói lên - miễn là bạn có các công cụ và hệ thống để lắng nghe nó.</p>
@@ -67,6 +72,9 @@
 <h3 class="mb-3 mt-5">Tiếp thị theo hướng dữ liệu là về dữ liệu mới, cứng chảy vào một khung lý thuyết không quá mới</h3>
 <p>Khi nói đến các lý thuyết tiếp thị có bức tranh lớn, hoặc bất kỳ lý thuyết kinh doanh nào cho vấn đề đó, hầu hết những người ra quyết định đều thích gắn bó với những gì đã được chứng minh là hoạt động trong một khoảng thời gian trước đây. (Hoặc họ có thời gian và nguồn lực để chờ đợi một lý thuyết mới sẽ ra mắt trong tương lai. Bạn có thể không rơi vào trường hợp đó!)</p>
 <p>Ngày nay, một trong những lý thuyết tiếp thị được tôn trọng này liên quan đến việc lấy khách hàng làm trung tâm, trong đó các tổ chức thiết kế chiến lược của họ xung quanh việc xác định và tạo ra giá trị cho những khách hàng tốt nhất của họ. Ý tưởng cơ bản đã có từ những năm 1970, khi các nhà tiếp thị nhận ra rằng khách hàng của họ không phải lúc nào cũng mua một sản phẩm hoặc dịch vụ đơn giản chỉ vì nó tồn tại.</p>
+<p class="mb-5">
+            <img src="images/công-nghệ-marketing-2.png" alt="" class="img-fluid">
+            </p>
 <P>Vì vậy, lấy khách hàng làm trung tâm không phải là điều mới mẻ. Điểm mới là trong vài năm qua, lượng dữ liệu có sẵn về khách hàng đã bùng nổ. Dữ liệu này có thể thúc đẩy các nỗ lực tiếp thị lấy khách hàng làm trung tâm. Nhập tiếp thị theo hướng dữ liệu. Chính sự kết hợp giữa lý thuyết đã được kiểm tra thời gian và dữ liệu mới có sẵn này đã làm cho nó trở nên hiệu quả.</P>
 <h3 class="mb-3 mt-5">Bây giờ, hãy đi vào chi tiết hơn về từng yếu tố tạo nên tiếp thị theo hướng dữ liệu: dữ liệu, động lực và tiếp thị.</h3>
 <p><b>Dữ liệu:</b> Khách hàng ngày nay tạo ra số lượng lớn dữ liệu ý định</p>
@@ -77,6 +85,9 @@
 <p>Tuy nhiên, để tận dụng những lợi thế này, tất cả dữ liệu ý định này phải được xác định, sắp xếp và có thể sử dụng được.</p>
 <p>Các nhà tiếp thị thực hiện đúng quy trình này sẽ phát triển mạnh mẽ khi hình thức Dữ liệu lớn mới mạnh mẽ này tiếp tục trở nên Lớn hơn. Các nhà tiếp thị không bỏ lỡ cơ hội.</p>
 <p><b>Tiếp thị:</b> liên tục cải thiện lấy khách hàng làm trung tâm</p>
+<p class="mb-5">
+            <img src="images/1_qYtck_dxe6v2W6YsYPHg_w.jpeg" alt="" class="img-fluid">
+            </p>
 <p>Khi bạn có dữ liệu phù hợp, bạn có thể hành động dựa trên dữ liệu đó bằng cách điều chỉnh các chiến lược và chiến dịch lấy khách hàng làm trung tâm xung quanh dữ liệu đó. Dữ liệu cung cấp thông tin chi tiết về điều gì hiệu quả (và điều gì không) cho một khách hàng hoặc nhóm khách hàng nhất định và bạn có thể phản hồi tương ứng.</p>
 <p>Ví dụ: nếu dữ liệu ý định báo hiệu rằng một trong các công ty khách hàng tiềm năng của bạn quan tâm đến một sản phẩm nhất định của bạn, bạn có thể chuẩn bị nội dung khác biệt giữa kênh mà bạn biết là sẽ hiệu quả nhất cho khách hàng tiềm năng đó và cung cấp nội dung đó cho họ.</p>
 <p>Hoạt động trực tuyến xung quanh nội dung đó sau đó sẽ báo hiệu liệu nội dung đó có giá trị đối với khách hàng trong quá trình bán hàng cuối cùng hay không - hay không. Sau đó, bạn có thể điều chỉnh chiến lược nội dung của mình dựa trên kết quả, ngay cả sau lần bán hàng đầu tiên khi bạn muốn làm sâu sắc thêm mối quan hệ với khách hàng.</p>
@@ -91,7 +102,7 @@
                   <a href="#" class="tag-cloud-link">Technology</a>
                </div>
             </div>
-            <div class="fb-comments" data-href="https://martechzonez.github.io/Data-Driven-Marketing.html" data-numposts="5" data-width=""></div>
+            <div class="fb-comments" data-href="https://martechzonez.github.io/tiep-thi-theo-huong-du-lieu.html" data-numposts="5" data-width=""></div>
             <!-- END comment-list -->
             
          </div>
