--- a/ung-dung-OTT.html
+++ b/ung-dung-OTT.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0" nonce="w2WED6Fv"></script>
     <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
       <div class="container">
         <a class="navbar-brand" href="index.html">MarTech<i>Zone</i>.</a>
@@ -62,14 +63,14 @@
 
             <p><i>Với sự phát triển và phủ sóng của công nghệ nói chung, cũng như điện thoại, máy tính thông minh đã thúc đẩy hàng loạt các phương thức giao tiếp mới giữa người và người như email và dịch vụ tin nhắn OTT. Vậy OTT là gì? Tiềm năng phát triển OTT tại Việt Nam?</i></p>
             <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/unnamed.png" alt="" class="img-fluid">
             </p>
 
 <h2 class="mb-3 mt-5">OTT là gì?</h2>
 <p>- OTT hay Over The Top là giải pháp cung cấp nội dung cho người sử dụng dựa trên nền tảng Internet. Thuật ngữ OTT đôi khi được sử dụng để mô tả bất kỳ loại nội dung video nào, chẳng hạn như video do người dùng tạo của YouTube. Nội dung không phải lúc nào cũng được xem trên TV và nó không cần phải là các chương trình TV.</p>
 <p>- Ví dụ người dùng đang dùng mạng Internet của VNPT nhưng dùng Zalo để gọi hoặc nhắn tin thì Zalo chính là OTT, đến cuối tháng người dùng chỉ việc trả tiền cho nhà mạng còn việc Zalo thu phí hay không thì nhà mạng không có trách nhiệm quản lý.  Nhà cung cấp dịch vụ Internet có nhiệm vụ  truyền tải gói tin đến thiết bị đầu cuối của người dùng.</p>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/13-netflix--15984494706121911602369.jpg" alt="" class="img-fluid">
             </p>
 <h2 class="mb-3 mt-5">Những loại dịch vụ nào có thể là OTT?</h2>
 <p>Loại dịch vụ OTT mà bạn có thể tương tác thường xuyên nhất là OTT <b>video</b> . Các dịch vụ như Netflix hoặc Hulu là các dịch vụ OTT video, cung cấp cho người dùng một số tùy chọn lập trình, cả về thư viện chương trình truyền hình và phim được cấp phép, cũng như chương trình gốc.</p>
@@ -82,7 +83,7 @@
 <li><b>Khả năng thích ứng với nhiều thiết bị:</b> Hiện nay, OTT đã được tương thích với rất nhiều thiết bị, từ máy chơi game, điện thoại thông minh, máy tính bảng hoặc TV thông minh, bất kỳ tài khoản nào cũng có thể đăng nhập và trải nghiệm OTT.</li>
 <h2 class="mb-3 mt-5">Tiềm năng phát triển OTT tại Việt Nam</h2>
 <p class="mb-5">
-              <img src="images/image_2.jpg" alt="" class="img-fluid">
+              <img src="images/93959435_1567667523382283_4327101012948025344_n.jpg" alt="" class="img-fluid">
             </p>
             <p>Sự phát triển của ứng dụng OTT dần trở nên phổ biến và quen thuộc hơn với người dùng bởi nhiều tiện ích mà nó mang lại trên các thiết bị như laptop, máy chơi game (PlayStation 4, WiiU, và Xbox One), smartphone , smart tivi, máy tính bảng,… đây là cơ hội phát triển tốt cho các ứng dụng OTT hiện nay tại Việt Nam.</p>
             <p>Theo đánh giá của Statista, vào tháng 7/2019, Việt Nam có đầy đủ các yếu tố để phát triển dịch vụ OTT. Trong năm 2018, có hơn 54% dân số thường xuyên truy cập Internet và con số này dự kiến sẽ tăng lên 38% vào năm 2023.</p>
@@ -96,7 +97,7 @@
                   <a href="#" class="tag-cloud-link">Technology</a>
                </div>
             </div>
-            <div class="fb-comments" data-href="https://martechzonez.github.io/Data-Driven-Marketing.html" data-numposts="5" data-width=""></div>
+            <div class="fb-comments" data-href="https://martechzonez.github.io/ung-dung-OTT.html" data-numposts="5" data-width=""></div>
             <!-- END comment-list -->
             
          </div>
